--- a/src/views/partials/base.hbs
+++ b/src/views/partials/base.hbs
@@ -6,12 +6,12 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Dropdown — VK test task" />
     <title>Dropdown — VK test task</title>
-    <link rel="stylesheet" href="/assets/css/style.min.css">
+    <link rel="stylesheet" href="/main.css">
   </head>
   <body>
 
     {{#block "main"}}{{/block}}
 
-    <script src="bundle.js" defer></script>
+    <script src="/bundle.js" defer></script>
   </body>
 </html>
