--- a/src/views/templates/index.hbs
+++ b/src/views/templates/index.hbs
@@ -5,6 +5,7 @@
         <h1>VK Dropdown Test task</h1>
 
         <!-- Multiuser, No server, With Avatars -->
+        <h5>Multiselect, no server, with avatars</h5>
         <section>
           <h3>Выберите пользователя</h3>
           <div class="vk-dropdown clearfix">
@@ -22,6 +23,7 @@
         </section>
 
         <!-- Single User, No server, With Avatars -->
+        <h5>Single select, no server, with avatars</h5>
         <section>
           <h3>Выберите пользователя</h3>
           <div class="vk-dropdown clearfix">
@@ -39,6 +41,7 @@
         </section>
 
         <!-- Multi User, No server, No Avatars -->
+        <h5>Multiselect, no server, no avatars</h5>
         <section>
           <h3>Выберите пользователя</h3>
           <div class="vk-dropdown clearfix">
@@ -56,6 +59,7 @@
         </section>
 
         <!-- Multi User, With server, With Avatars -->
+        <h5>Multiselect, with server, with avatars</h5>
         <section>
           <h3>Выберите пользователя</h3>
           <div class="vk-dropdown clearfix">
