--- a/src/views/templates/index.hbs
+++ b/src/views/templates/index.hbs
@@ -76,6 +76,11 @@
           </div>
         </section>
 
+        <h5>Users List</h5>
+        <section>
+          <ul id="users"></ul>
+        </section>
+
 
       </main>
 
